# ollama-email-filter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gmail_spam_filter.py  pyproject.toml
inbox/: listener.py
inbox/action/: message.py  spam.py
inbox/provider/: generic.py  google.py
