[tool.poetry]
name = "GmailAPIWrapper"
version = "0.1.0"
description = "A simple wrapper for Gmail API to interact with Gmail services."
authors = ["Han Wang <han.wang.2718+dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
google-auth-oauthlib = "*"
google-auth-httplib2 = "*"
google-api-python-client = "*"
langchain = "*"
langchain_core = "*"
langchain_openai = "*"
langchain-community = "*"
ollama = "*"
bs4 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
